{
  "dashboard": "Dashboard",
  "companies": "Companies",
  "about": "About",
  "selectDate": "Choose Date",
  "selectTime": "Choose Time",
  "select": "Select",
  "cancel": "Cancel",
  "pleaseWait": "Please Wait...",
  "login": "Login",
  "name": "Name",
  "username": "Username",
  "email": "Email",
  "password": "Password",
  "register": "Register",
  "askRegister": "Don't have an Account?",
  "errorInvalidEmail": "Email is not valid",
  "errorEmptyField": "Can't be empty",
  "errorPasswordLength": "Password must be at least 6 characters",
  "passwordRepeat": "Repeat Password",
  "errorPasswordNotMatch": "Password doesn't match",
  "settings": "Settings",
  "themeLight": "Theme Light",
  "themeDark": "Theme Dark",
  "themeSystem": "Theme System",
  "chooseTheme": "Choose Theme",
  "chooseLanguage": "Choose Language",
  "errorNoData": "No data",
  "logout": "Logout",
  "logoutDesc": "Do you want to logout from the app?",
  "yes": "Yes"
}