class Constants {
  Constants._();

  static Constants get = Constants._();

  String appName = "BD Stock Trend App";
  String english = "English";
  String bahasa = "Bahasa";

  String imagePlaceHolder =
      "https://cdn.dribbble.com/users/5478575/screenshots/12108011/media/17e913f849a16ea1f349b73afa04bbf9.jpg?compress=1&resize=400x300";
}
