appId: iit.nstu.bdstocktrend.stg
---
- tapOn: "Menu"
- tapOn: "Logout"
- tapOn: "Yes"